Instance class gets all of its parsing functions exported to Utils class